--- a/frontend/loc/package.json
+++ b/frontend/loc/package.json
@@ -36,6 +36,7 @@
     "eslint-config-next": "15.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "whatwg-fetch": "^3.6.20"
   }
 }
