[Commit] integrated backend api with frontend

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ node_modules/*
 backend/fastapi_app/venv
 backend/fastapi_app/venv/
 backend/fastapi_app/venv/*
+backend/fastapi_app/.venv/*
 
 # Ignore the environment variables file
 backend/fastapi_app/.env
@@ -49,3 +50,4 @@ backend/fastapi_app/datasets/*
 backend/fastapi_app/models
 backend/fastapi_app/models/
 backend/fastapi_app/models/*
+backend/fastapi_app/models/
